--- a/index.html
+++ b/index.html
@@ -78,6 +78,11 @@
                              субтитрів, зберігаючи все в одному файлі</td>
                         <td class="invis">MP4</td>
                     </tr>
+                    <tfoot>
+                        <tr>
+                            <th class="tfoot" colspan="3">Медіаконтейнери – формат, що дає можливість в одному файлі розміщувати мультимедійні дані різних типів</td>
+                        </tr> 
+                    </tfoot>
                 </table>
             </div>
             <div id="myModal" class="modal">
