--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <table>
                     <thead>
                         <tr>
-                            <th colspan="3">Медіаконтейнери – формат, що дає можливість в одному файлі розміщувати мультимедійні дані різних типів</td>
+                            <th class="thead" colspan="3">Медіаконтейнери – формат, що дає можливість в одному файлі розміщувати мультимедійні дані різних типів</td>
                         </tr> 
                     </thead>
                     <tr>
