--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/style.css">
-    <title>Bzz bzz site</title>
+    <title>Bzz bzz</title>
 </head>
 <body>
     <div class="content">
@@ -73,7 +73,7 @@
                     </tr>
                     <tr>
                         <td class="tcol">MP4</td>
-                        <td class="trow">(Matroska, Матрёшка<img id="myImg" class="trigg_img" src="img/4a6ae3bab666807c5a4a93cd40466e57.jpeg"
+                        <td class="trow">(Matroska, Матрёшка<span class="trigg"><img id="myImg2" class="trigg_img" src="img/4a6ae3bab666807c5a4a93cd40466e57.jpeg"
                              style="width: 10px;height: 10px;"></span>) може містити велике число потоків аудіо, відео і 
                              субтитрів, зберігаючи все в одному файлі</td>
                         <td class="invis">MP4</td>
@@ -88,6 +88,10 @@
             <div id="myModal" class="modal">
                 <span class="close">&times;</span>
                 <img class="modal_content" id="img01" style="width: 500px; height: 500px; ">
+            </div>
+            <div id="myModal2" class="modal2">
+                <span class="close2">&times;</span>
+                <img class="modal_content2" id="img02" style="width: 500px; height: 500px; ">
             </div>
             <script src="script/imgScr.js"></script>
         </main>
