--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
                 <img class="modal_content2" id="img02" style="width: 500px; height: 500px; ">
             </div>
             <script src="script/imgScr.js"></script>
+            <script src="script/tab.js"></script>
         </main>
     </div>
 </body>
