--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                     <a href="https://uk.wikipedia.org/wiki/%D0%9C%D1%83%D0%BB%D1%8C%D1%82%D0%B8%D0%BC%D0%B5%D0%B4%D1%96%D0%B0" target="_blank">Вікіпедія</a>
                 </div>
             </div>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/eihM5MNdylc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <div class="list_container">
                 <p class="title">Пристрої для роботи з мультимедіа</p>
                 <ul>
